src/test/test-models/good/keywords-print.stan
parameters {
  real printer;
}
model {
  printer ~ normal(0,1);
}
