src/test/test-models/bad/reserved/STAN_MAJOR.stan
data {
  real STAN_MAJOR;
}
model {
}
